@@ -72,8 +72,8 @@ namespace lsp
 
             public:
 
-                status_t            writeb(bool value);
-                inline status_t     writev(bool value)                                          { return writeb(value);                 }
+                status_t            bwrite(bool value);
+                inline status_t     writev(bool value)                                          { return bwrite(value);                }
                 inline status_t     writev(uint8_t value, size_t bits = sizeof(uint8_t)*8)      { return writev(uint32_t(value), bits);  }
                 inline status_t     writev(int8_t value, size_t bits = sizeof(int8_t)*8)        { return writev(uint32_t(value), bits);  }
                 inline status_t     writev(uint16_t value, size_t bits = sizeof(uint16_t)*8)    { return writev(uint32_t(value), bits);  }
